src/sass/_instance_detail_console.scss
.instance-console-tab {
  .p-panel__controls {
    display: flex;
    justify-content: space-between;
    margin-bottom: $spv--large;
    padding-top: 0;

    .console-radio-wrapper {
      align-items: flex-end;
      display: flex;

      .right-margin {
        margin-right: $sph--x-large;
      }
    }
  }

  .spice-wrapper {
    overflow: auto;
  }

  #spice-screen canvas {
    background: black;
  }
}

.instance-console-shortcut-dropdown {
  max-height: 300px;
  overflow-y: scroll;
}

